--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,122 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/primary"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary">
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="634dp"
-        android:layout_height="906dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="132dp"
+        android:id="@+id/background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="center"
         app:srcCompat="@drawable/foods" />
+
+    <ImageView
+        android:id="@+id/background_gradient"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/background"
+        app:layout_constraintEnd_toEndOf="@id/background"
+        app:layout_constraintTop_toTopOf="@id/background"
+        app:layout_constraintBottom_toBottomOf="@id/background"
+        android:background="@drawable/gradient" />
+
     <TextView
         android:id="@+id/sign_in_header"
         android:layout_width="wrap_content"
         android:layout_marginTop="28dp"
         android:layout_height="60dp"
-        android:textSize="28sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="#000000"
         android:text="@string/sign_in_title" />
 
-    <EditText
-        android:id="@+id/sign_in_email_field"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_header"
-        android:inputType="textEmailAddress"
-        android:imeOptions="actionGo"
-
-        android:hint="@string/form_email" />
-
-    <Button
-        android:id="@+id/sign_in_continue_button"
-        style="@style/CallToAction"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:text="@string/action_continue"
-        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="2dp"
-        android:background="#000000"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@id/seperator_text"
-        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toEndOf="@id/seperator_text"
-        app:layout_constraintTop_toTopOf="@id/seperator_text" />
-
-    <TextView
-        android:id="@+id/seperator_text"
-        android:layout_width="30dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="20dp"
-        android:autoSizeTextType="uniform"
-        android:textColor="#000000"
-        android:text="@string/logic_or"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@id/placeholderButton"
-        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_continue_button" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginEnd="2dp"
-        android:background="#000000"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@id/seperator_text"
-        app:layout_constraintEnd_toStartOf="@id/seperator_text"
-        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toTopOf="@id/seperator_text" />
-
-    <Button
-        android:id="@+id/placeholderButton"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:text="SIGN IN WITH GOOGLE (NoImpl)"
-        style="@style/Disabled"
-        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/seperator_text" />
-
-    <Button
-        android:id="@+id/placeholderButton1"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:text="SIGN IN WITH GITHUB (NoImpl)"
-        style="@style/Disabled"
-        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/placeholderButton" />
 
 
+        <EditText
+            android:id="@+id/sign_in_email_field"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sign_in_header"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionGo"
+            android:hint="@string/form_email" />
+
+        <Button
+            android:id="@+id/sign_in_continue_button"
+            style="@style/CallToAction"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/action_continue"
+            app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+            app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+            app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="2dp"
+            android:background="#000000"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@id/seperator_text"
+            app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+            app:layout_constraintStart_toEndOf="@id/seperator_text"
+            app:layout_constraintTop_toTopOf="@id/seperator_text" />
+
+        <TextView
+            android:id="@+id/seperator_text"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:autoSizeTextType="uniform"
+            android:textColor="#000000"
+            android:text="@string/logic_or"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@id/placeholderButton"
+            app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+            app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+            app:layout_constraintTop_toBottomOf="@id/sign_in_continue_button" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginEnd="2dp"
+            android:background="#000000"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@id/seperator_text"
+            app:layout_constraintEnd_toStartOf="@id/seperator_text"
+            app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+            app:layout_constraintTop_toTopOf="@id/seperator_text" />
+
+        <Button
+            android:id="@+id/placeholderButton"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="40dp"
+            android:text="SIGN IN WITH GOOGLE (NoImpl)"
+            style="@style/Disabled"
+            app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+            app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+            app:layout_constraintTop_toBottomOf="@id/seperator_text" />
+
+        <Button
+            android:id="@+id/placeholderButton1"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="15dp"
+            android:text="SIGN IN WITH GITHUB (NoImpl)"
+            style="@style/Disabled"
+            app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+            app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+            app:layout_constraintTop_toBottomOf="@id/placeholderButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
