--- a/app/src/main/res/layout/activity_sign_in_with_email.xml
+++ b/app/src/main/res/layout/activity_sign_in_with_email.xml
@@ -2,8 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary">
 
+
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="center"
+        app:srcCompat="@drawable/foods" />
+
+    <ImageView
+        android:id="@+id/background_gradient"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/background"
+        app:layout_constraintEnd_toEndOf="@id/background"
+        app:layout_constraintTop_toTopOf="@id/background"
+        app:layout_constraintBottom_toBottomOf="@id/background"
+        android:background="@drawable/gradient" />
     <TextView
         android:id="@+id/sign_in_with_email_header"
         android:layout_width="wrap_content"
@@ -48,6 +70,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/callToAction"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_password"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_password"
         app:layout_constraintTop_toBottomOf="@id/sign_in_email_password" />
