--- a/app/src/main/res/layout/order_page.xml
+++ b/app/src/main/res/layout/order_page.xml
@@ -145,6 +145,7 @@
         >
 
         <LinearLayout
+            android:id="@+id/order_status_stars"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
